--- a/IS-proyecto/web/visualizar.html
+++ b/IS-proyecto/web/visualizar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
 	<title>Visualizar</title>
 	<link rel="stylesheet" type="text/css" href="css/materialize.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
@@ -42,11 +43,11 @@
 					<blockquote class="center" id="id" >FORMATOID</blockquote>
 				</div>
 				<div class="col s4">
-					<p class="blue-text">Correo Electrónico:</p>
+					<p class="blue-text">Correo Electr&oacute;nico:</p>
 					<blockquote class="center" id="correo" >pendejazo@ipn.mx</blockquote>
 				</div>
 				<div class="col s4">
-					<p class="blue-text">Teléfono:</p>
+					<p class="blue-text">Tel&eacute;fono:</p>
 					<blockquote class="center" id="telefono" >5566998877</blockquote>
 				</div>
 			</div>
@@ -58,6 +59,10 @@
 				<div class="col s4">
 					<p class="blue-text">Estado:</p>
 					<blockquote class="center" id="estado" >Activo</blockquote>
+				</div>
+				<div class="col s4">
+					<p class="blue-text">N&uacute;mero Profesor:</p>
+					<blockquote class="center" id="numprof">12308134 ejemplo xD</blockquote>
 				</div>
 			</div>
 			<div class="row center">
