--- a/IS-proyecto/web/registrar.html
+++ b/IS-proyecto/web/registrar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
 	<title>Registrar</title>
 	<link rel="stylesheet" type="text/css" href="css/materialize.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
@@ -22,63 +23,67 @@
 			<hr>
 		</div>
 		<div class="row">
-			<div class="row">
-				<div class=" input-field col s4">
-					<input placeholder="Max 40 caracteres" id="Nombre" type="text" class="validate">
-          			<label for="Nombre">Nombre*</label>
+			<form id="registrarform">
+				<div class="row">
+					<div class=" input-field col s4">
+						<input placeholder="Max 40 caracteres" id="nombre" name="nombre" type="text" class="validate">
+	          			<label for="nombre">Nombre*</label>
+					</div>
+					<div class="input-field col s4">
+						<input placeholder="Max 40 caracteres" id="priape" name="priape" type="text" class="validate">
+	          			<label for="priape">Primer apellido*</label>
+					</div>
+					<div class="input-field col s4">
+						<input placeholder="Max 40 caracteres" id="segape" name="segape" type="text" class="validate">
+	          			<label for="segape">Segundo apellido*</label>
+					</div>
 				</div>
-				<div class="input-field col s4">
-					<input placeholder="Max 40 caracteres" id="PriApe" type="text" class="validate">
-          			<label for="PriApe">Primer apellido*</label>
+				<div class="row">
+					<div class="input-field col s4">
+						<input placeholder="N&uacute;meros y letras min 6 max 8" id="password" name="password" type="password" class="validate">
+	          			<label for="password">Contraseña*</label>
+					</div>
+					<div class="input-field col s4">
+						<input placeholder="" id="reppass" name="reppass" type="password" class="validate">
+	          			<label for="reppass">Repetir contraseña*</label>
+					</div>
+					<div class="input-field col s4">
+						<input placeholder="10 d&iacute;gitos" id="cel" name="cel" type="text" class="validate">
+	          			<label for="cel">N&uacute;mero celular</label>
+					</div>
 				</div>
-				<div class="input-field col s4">
-					<input placeholder="Max 40 caracteres" id="SegApe" type="text" class="validate">
-          			<label for="SegApe">Segundo apellido*</label>
+				<div class="row center">
+					<div class="input-field col s4">
+						<input placeholder="" id="numprof" name="numprof" type="text" class="validate">
+	          			<label for="numprof">N&uacute;mero del profesor</label>
+					</div>
+					<div class="input-field col s4 ">
+						<input placeholder="" id="email" name="email" type="text" class="validate">
+	          			<label for="email">Correo electr&oacute;nico</label>
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="input-field col s4">
-					<input placeholder="N&uacute;meros y letras min 6 max 8" id="password" type="password" class="validate">
-          			<label for="password">Contraseña*</label>
+				<div class="row">
+					<div class="col s6">
+						<p><label><input type="checkbox" name="check"/><span>Administrador</span></label></p>
+					</div>
+					<br/>
+					<br/>
+					<p class="grey-text text-darken-1">Los campos marcados con * son campos obligatorios</p>
 				</div>
-				<div class="input-field col s4">
-					<input placeholder="" id="RepPass" type="password" class="validate">
-          			<label for="RepPass">Repetir contraseña*</label>
+				<div class="row center">
+	                <div class="col s6">
+	                	<a class="waves-effect waves-light btn blue darken-3"  id="registrar">Registrar</a>
+	            	</div>
+	            	<div class="col s6">
+	                	<a class="waves-effect waves-light btn red darken-3" href="profesores.html">Regresar</a>
+	            	</div>
 				</div>
-				<div class="input-field col s4">
-					<input placeholder="" id="Cel" type="text" class="validate">
-          			<label for="Cel">N&uacute;mero celular</label>
-				</div>
-			</div>
-			<div class="row center">
-				<div class="col s4"></div>
-				<div class="input-field col s4 ">
-					<input placeholder="" id="email" type="text" class="validate">
-          			<label for="email">Correo electr&oacute;nico</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col s4"></div>
-
-				<div class="col s6">
-					<form><p><label><input type="checkbox" class="filled-in"/><span>Administrador</span></label></p></form>
-				</div>
-				<br/>
-				<br/>
-				<p class="grey-text text-darken-1">Los campos marcados con * son campos obligatorios</p>
-			</div>
-			<div class="row center">
-                                                                            <div class="col s6">
-                                                                                        <a class="waves-effect waves-light btn blue darken-3"  id="registrar">Registrar</a>
-                                                                        </div>
-                                                                        <div class="col s6">
-                                                                                    <a class="waves-effect waves-light btn red darken-3" href="profesores.html">Regresar</a>
-                                                                        </div>
-			</div>
+			</form>
 		</div>
 	</div>
 
 	<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="js/materialize.js"></script>
+                    <script type="text/javascript" src="js/jsRegistrar.js"></script>
 </body>
 </html>
